tests/expectations/compiler/type_inference/unsuffixed_literal_array_index_oob_fail.out
Error [ESAZ0374010]: Array index 4 out of bounds (array length is 3).
    --> compiler-test:4:18
     |
   4 |         let x0 = arr[4]; // out of bounds
     |                  ^^^^^^
